# CAST

./: .gitignore  README.md  TEIAnalyzer.py  dashboard.py  estrazione_txt.py  extract_txt.py  main.py  pyproject.toml  siti.txt  txt2tei.py  utils.py
analysis/: screenplay_analysis.json  screenplay_analysis_macro_stats.json
